--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <rxjs-dos-root></rxjs-dos-root>
+    <dos-root></dos-root>
   </body>
 </html>
